[gd_scene load_steps=35 format=3 uid="uid://dvkgcfmj35dlj"]

[ext_resource type="Script" uid="uid://co20r30ivr7p8" path="res://scenes/fishing/scr_fishing_minigame.gd" id="1_v6q63"]
[ext_resource type="Script" uid="uid://cbln448bu2tat" path="res://code/scr_weighted_random_pair.gd" id="2_8qmcw"]
[ext_resource type="Script" uid="uid://cj7keq8nk1wh3" path="res://code/scr_weighted_random_container.gd" id="2_clupb"]
[ext_resource type="PackedScene" uid="uid://ekxwo70dmot1" path="res://scenes/tech/scn_camera.tscn" id="2_mb35u"]
[ext_resource type="PackedScene" uid="uid://d2rbwb8pdr8d4" path="res://scenes/fishing/blocks.tscn" id="4_4dw0x"]
[ext_resource type="Script" uid="uid://dn26osrrqrfvi" path="res://scenes/fishing/spawner.gd" id="4_elwxk"]
[ext_resource type="Texture2D" uid="uid://bsuf211rk241i" path="res://sprites/biking/spr_biking_elements.png" id="4_ohvva"]
[ext_resource type="Texture2D" uid="uid://madwfefthwfd" path="res://sprites/fishing/spr_cow_ant.png" id="5_e8u18"]
[ext_resource type="Texture2D" uid="uid://caxtnijbq1v7k" path="res://sprites/photos/spr_shopping_cart.png" id="6_jrqy2"]
[ext_resource type="Texture2D" uid="uid://d1s2np52q3rhb" path="res://sprites/characters/overworld/spr_fishermen_overworld.png" id="7_thb0r"]
[ext_resource type="AudioStream" uid="uid://bhr82d56ke3am" path="res://sounds/car_overrun.ogg" id="11_ee500"]
[ext_resource type="PackedScene" uid="uid://c8go4y8lln00d" path="res://scenes/fishing/hook.tscn" id="12_elwxk"]

[sub_resource type="Curve" id="Curve_itjb6"]
_data = [Vector2(0, 0.0350878), 0.0, 0.358852, 0, 0, Vector2(0.268371, 0.152862), 0.718393, 0.718393, 0, 0, Vector2(0.405208, 0.0553145), 0.0, 0.0, 0, 0, Vector2(0.505098, 0.297025), 10.3461, 10.3461, 0, 0, Vector2(0.529209, 0.0653858), 0.0, 0.0, 0, 0, Vector2(0.911546, 0.196312), 0.0, 0.0, 0, 0, Vector2(1, 0.0754571), 0.0, 0.0, 0, 0]
point_count = 7

[sub_resource type="Curve" id="Curve_amim5"]
bake_resolution = 32
_data = [Vector2(0, 0.204191), 0.0, 0.0, 0, 0, Vector2(0.492013, 0.485384), 0.0, 0.0, 0, 0, Vector2(0.738019, 1), 0.560372, 0.560372, 0, 0]
point_count = 3

[sub_resource type="Resource" id="Resource_ak44i"]
script = ExtResource("2_8qmcw")
id = &"gummy_fish"
weight = 25

[sub_resource type="Resource" id="Resource_gk55d"]
script = ExtResource("2_8qmcw")
id = &"rain_boot"
weight = 16

[sub_resource type="Resource" id="Resource_ylpm1"]
script = ExtResource("2_8qmcw")
id = &"fish"
weight = 26

[sub_resource type="Resource" id="Resource_yawqg"]
script = ExtResource("2_8qmcw")
id = &"bread"
weight = 15

[sub_resource type="Resource" id="Resource_w2a5d"]
script = ExtResource("2_8qmcw")
id = &"water_balloon"
weight = 12

[sub_resource type="Resource" id="Resource_qflo4"]
script = ExtResource("2_8qmcw")
id = &"coin_lure"
weight = 1

[sub_resource type="Resource" id="Resource_ps4ll"]
script = ExtResource("2_8qmcw")
id = &"combo_lure"
weight = 1

[sub_resource type="Resource" id="Resource_swvdc"]
script = ExtResource("2_8qmcw")
id = &"drill_lure"
weight = 1

[sub_resource type="Resource" id="Resource_tbueb"]
script = ExtResource("2_8qmcw")
id = &"green_lure"
weight = 2

[sub_resource type="Resource" id="Resource_qvlaj"]
script = ExtResource("2_8qmcw")
id = &"umbrella_lure"
weight = 1

[sub_resource type="Resource" id="Resource_inxmd"]
script = ExtResource("2_clupb")
elements = Array[ExtResource("2_8qmcw")]([SubResource("Resource_ak44i"), SubResource("Resource_gk55d"), SubResource("Resource_ylpm1"), SubResource("Resource_yawqg"), SubResource("Resource_w2a5d"), SubResource("Resource_qflo4"), SubResource("Resource_ps4ll"), SubResource("Resource_swvdc"), SubResource("Resource_tbueb"), SubResource("Resource_qvlaj")])

[sub_resource type="Environment" id="Environment_3gpcx"]
background_mode = 3
ambient_light_source = 1
glow_enabled = true
glow_levels/1 = 16.0
glow_levels/2 = 16.0
glow_levels/3 = 16.0
glow_levels/4 = 16.0
glow_levels/5 = 0.0
glow_intensity = 1.35
glow_strength = 1.05
glow_bloom = 0.01
glow_hdr_threshold = 0.79
glow_hdr_scale = 0.44
glow_hdr_luminance_cap = 4.47
adjustment_enabled = true
adjustment_contrast = 0.97
adjustment_saturation = 1.09

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6q45r"]
resource_local_to_scene = true

[sub_resource type="Gradient" id="Gradient_elwxk"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.404295, 0.719731)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_krtge"]
seed = 3
frequency = 0.123

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0bedv"]
width = 12
height = 10
color_ramp = SubResource("Gradient_elwxk")
noise = SubResource("FastNoiseLite_krtge")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l3rk"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.168627)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arky4"]
bg_color = Color(0.6, 0.898039, 0.6, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0nga"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.839216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4e5s6"]
bg_color = Color(0.309804, 0.556863, 0.435294, 1)

[node name="FishingMinigame" type="Node2D" groups=["_fancy_graphics_option_owners"]]
script = ExtResource("1_v6q63")
depth_fish_increase_curve = SubResource("Curve_itjb6")
depth_item_increase_curve = SubResource("Curve_amim5")
random_items = SubResource("Resource_inxmd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3gpcx")

[node name="Layers" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Bgest" type="ColorRect" parent="Layers"]
z_index = -6
material = SubResource("ShaderMaterial_6q45r")
layout_mode = 0
offset_left = -83.0
offset_top = -63.0
offset_right = 83.0
offset_bottom = 64.0
color = Color(0.012, 0.314, 0.498, 0.614)

[node name="Bg" type="ColorRect" parent="Layers"]
material = SubResource("ShaderMaterial_6q45r")
layout_mode = 0
offset_left = -83.0
offset_top = -63.0
offset_right = 83.0
offset_bottom = 64.0
color = Color(0.012, 0.314, 0.498, 0.652)

[node name="Fg" type="ColorRect" parent="Layers"]
z_index = 1
material = SubResource("ShaderMaterial_6q45r")
layout_mode = 0
offset_left = -83.0
offset_top = -63.0
offset_right = 83.0
offset_bottom = 64.0
color = Color(0, 0.329412, 0.709804, 0.286275)

[node name="Spawner" type="Node2D" parent="." node_paths=PackedStringArray("fish_parent")]
script = ExtResource("4_elwxk")
depth_fish_increase_curve = SubResource("Curve_itjb6")
depth_item_increase_curve = SubResource("Curve_amim5")
random_items = SubResource("Resource_inxmd")
fish_parent = NodePath("../FishParent")

[node name="FishCarTimer" type="Timer" parent="Spawner"]
wait_time = 0.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Spawner/FishCarTimer"]
position = Vector2(-86, 1)
stream = ExtResource("11_ee500")
volume_db = 4.0
max_distance = 400.0
panning_strength = 2.3

[node name="Blocks" parent="." node_paths=PackedStringArray("noise_sprite") instance=ExtResource("4_4dw0x")]
noise_sprite = NodePath("../NoiseSprite")

[node name="Camera" parent="." instance=ExtResource("2_mb35u")]

[node name="NoiseSprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.0666667)
position = Vector2(-96, -80)
scale = Vector2(16, 16)
texture = SubResource("NoiseTexture2D_0bedv")
centered = false

[node name="FishParent" type="Node2D" parent="."]

[node name="MailKiosk" type="Sprite2D" parent="FishParent"]
modulate = Color(0.513726, 0.670588, 0.541176, 1)
z_index = -1
position = Vector2(-71, 122)
rotation = 0.321204
scale = Vector2(3, 3)
texture = ExtResource("4_ohvva")
region_enabled = true
region_rect = Rect2(0, 28, 24, 36)

[node name="CowAnt" type="Sprite2D" parent="FishParent"]
editor_description = "i was forced to add this against my will
"
modulate = Color(0.513726, 0.670588, 0.541176, 1)
z_index = -1
position = Vector2(-71, 219)
rotation = 0.321204
texture = ExtResource("5_e8u18")
region_rect = Rect2(0, 28, 24, 36)

[node name="Fisherman" type="Sprite2D" parent="FishParent"]
self_modulate = Color(0, 0.309804, 0.533333, 1)
z_index = -3
position = Vector2(61, 97)
rotation = -2.6772
scale = Vector2(3, 3)
texture = ExtResource("7_thb0r")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="ShoppingCart" type="Sprite2D" parent="FishParent"]
self_modulate = Color(0.384314, 0.603922, 0.564706, 1)
z_index = -3
position = Vector2(48, 119)
rotation = -0.340145
scale = Vector2(0.223, 0.223)
texture = ExtResource("6_jrqy2")
region_rect = Rect2(0, 0, 16, 16)

[node name="LineDrawer" type="Sprite2D" parent="."]

[node name="Hook" parent="." node_paths=PackedStringArray("line_drawer") instance=ExtResource("12_elwxk")]
position = Vector2(0, -48)
line_drawer = NodePath("../LineDrawer")

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 160.0
offset_bottom = 120.0
metadata/_edit_lock_ = true

[node name="TopContainer" type="HBoxContainer" parent="Ui"]
layout_mode = 0
offset_left = 1.0
offset_right = 160.0
offset_bottom = 13.0

[node name="DepthLabel" type="Label" parent="Ui/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "depth: %sm"

[node name="Combobar" type="ProgressBar" parent="Ui/TopContainer"]
custom_minimum_size = Vector2(24, 3)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_6l3rk")
theme_override_styles/fill = SubResource("StyleBoxFlat_arky4")
max_value = 2.0
show_percentage = false

[node name="PointsLabel" type="Label" parent="Ui/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "points: 0"
horizontal_alignment = 2

[node name="AfterCrashTimer" type="Timer" parent="Ui"]

[node name="Congrats" type="RichTextLabel" parent="Ui"]
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 128.0
offset_bottom = 80.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
bbcode_enabled = true
vertical_alignment = 1

[node name="Timebar" type="ProgressBar" parent="Ui"]
custom_minimum_size = Vector2(24, 3)
layout_mode = 2
offset_top = 117.0
offset_right = 160.0
offset_bottom = 120.0
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxFlat_h0nga")
theme_override_styles/fill = SubResource("StyleBoxFlat_4e5s6")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="FishCarLabel" type="Label" parent="Ui"]
visible = false
layout_mode = 0
offset_left = 49.0
offset_top = 2.0
offset_right = 121.0
offset_bottom = 14.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "fish car!!!"

[connection signal="timeout" from="Ui/AfterCrashTimer" to="." method="_on_after_crash_timer_timeout" flags=6]
